it will add some section in the html body page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width" initial scale="1.0">
         <title>Moringa landing page</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/images">
     </head>
     <body>
 
@@ -25,5 +25,22 @@
                 </div>
             </div>
         </section>
+
+        <!--moringa-->
+    <section id="sectmoringa">
+        <div class="m-school">
+        <div class="tech">
+               <h4>Moringa</h4>
+               <h2><span style="color: #EC4067">Nurturing Africa's Tech Talent</span></h2>
+               <p>Through market-aligned skills in training, we help<br>learners build new career possibilities with greater<br>confidence and capability.</p>
+               <button class="Enroll Now">Enroll Now</button>
+               <button class="Explore">Explore</button>
+            </div>
+            <div class="nurture-img">
+                <img src="./assets/images/image1.png" alt="nurture image" height="300" width="300">
+            </div>
+        </div>
+    </section>
+
     </body>
 </html>
