it will add stories section in html

--- a/index.html
+++ b/index.html
@@ -5,26 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width" initial scale="1.0">
         <title>Moringa landing page</title>
-        <link rel="stylesheet" type="text/css" href="./assets/css/images">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
 
-        <!--navigation-->
-        <section id="nav">
-            <div class="top">
-                <div class="logo">
-                    <h2>Moringa School</h2>
-                </div>
-                <div class="thelinks">
+        <nav>
+            <div class="topnav">
+                    <a href="Moringa School">Moringa School</a>
+                <div class="topnav-right">
                     <ul>
-                        <li><a href="Courses"></a></li>
-                        <li><a href="Our projects"></a></li>
-                        <li><a href="Stories"></a></li>
+                        <li><a href="Courses">Courses</a></li>
+                        <li><a href="Our projects">Our projects</a></li>
+                        <li><a href="Stories">Stories</a></li>
                         <li><button class="Enroll">Enroll</button></li>
                     </ul>
                 </div>
             </div>
-        </section>
+        </nav>
 
         <!--moringa-->
     <section id="sectmoringa">
@@ -38,6 +35,21 @@
             </div>
             <div class="nurture-img">
                 <img src="./assets/images/image1.png" alt="nurture image" height="300" width="300">
+            </div>
+        </div>
+    </section>
+
+     <!--stories-->
+     <section id="sectstories">
+        <h3>Stories<span>So many memories</span></h3>
+        <div class="stories">
+            <div class="orient-img">
+                <img src="./assets/images/image2.png">
+            </div>
+            <div class="orient-day">
+                <h3>Orientation day</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+                <button class="See album">See album</button>
             </div>
         </div>
     </section>
