--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width" initial scale="1.0">
         <title>Moringa landing page</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
     </head>
     <body>
 
@@ -44,13 +44,28 @@
         <h3>Stories<span>So many memories</span></h3>
         <div class="stories">
             <div class="orient-img">
-                <img src="./assets/images/image2.png">
+                <img src="./assets/images/image 2 .png" alt="orient-img" height="200">
             </div>
             <div class="orient-day">
                 <h3>Orientation day</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
                 <button class="See album">See album</button>
             </div>
+        </div>
+    </section>
+
+
+    <!--board-->
+    <section id="sectboard">
+        <div class="board">
+        <div class="board meeting">
+            <h3>Board meeting</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <button class="Read out stories">Read out stories</button>
+        </div>
+        <div class="board-img">
+            <img src="./assets/images/image 3 .png" alt="board-img" height="300" width="300">
+        </div>
         </div>
     </section>
 
