it will add changes and a section in the body

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width" initial scale="1.0">
         <title>Moringa landing page</title>
-        <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
 
-        <nav>
+        <!--Top Navigation-->
             <div class="topnav">
+        <!--left-aligned links(default)-->
                     <a href="Moringa School">Moringa School</a>
+        <!--Right-aligned links-->
                 <div class="topnav-right">
                     <ul>
                         <li><a href="Courses">Courses</a></li>
@@ -21,7 +23,6 @@
                     </ul>
                 </div>
             </div>
-        </nav>
 
         <!--moringa-->
     <section id="sectmoringa">
@@ -65,6 +66,20 @@
         </div>
         <div class="board-img">
             <img src="./assets/images/image 3 .png" alt="board-img" height="300" width="300">
+        </div>
+        </div>
+    </section>
+
+    <!--Graduation-party-->
+    <section id="sectgrad">
+        <div class="Grad">
+        <div class="party">
+            <img src="./assets/images/image 4.png" alt="Graduation party" height="300">
+        </div>
+        <div class="Grad-party">
+            <h3>Graduation party</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <button class="See album">See album</button>
         </div>
         </div>
     </section>
