it will some css styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width" initial scale="1.0">
         <title>Moringa landing page</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
 
@@ -19,7 +19,7 @@
                         <li><a href="Courses">Courses</a></li>
                         <li><a href="Our projects">Our projects</a></li>
                         <li><a href="Stories">Stories</a></li>
-                        <li><button class="Enroll">Enroll</button></li>
+                        <button class="Enroll">Enroll</button>
                     </ul>
                 </div>
             </div>
