--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section id="sectgrad">
         <div class="Grad">
         <div class="party">
-            <img src="./assets/images/image 4.png" alt="Graduation party" height="300">
+            <img src="./assets/images/image 4.png" alt="Graduation party" height="200">
         </div>
         <div class="Grad-party">
             <h3>Graduation party</h3>
@@ -84,5 +84,19 @@
         </div>
     </section>
 
+    <!--mentors-->
+    <section id="sectment">
+        <h2>Technical Mentors<span>skilled and kind</span></h2>
+        <div class="theTms">
+        <div class="Rose">
+            <img src="./assets/images/image 5.png" alt="Rose TM" height="200">
+            </div>
+            <div class="webdev">
+            <h5>Web Development</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <button class="Ask A Question">Ask A Question</button>
+        </div>
+
+        
     </body>
 </html>
