it will add another section in the html body part

--- a/index.html
+++ b/index.html
@@ -97,6 +97,25 @@
             <button class="Ask A Question">Ask A Question</button>
         </div>
 
+        <div class="Byron">
+            <img src="./assets/images/image 6.png" alt="Byron TM" height="200">
+            </div>
+            <div class="webdev">
+            <h5>Web Development</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <button class="Ask A Question">Ask A Question</button>
+        </div>
+        
+        <div class="Raphael">
+            <img src="./assets/images/image 7.png" alt="Raphael TM" height="200">
+            </div>
+            <div class="webdev">
+            <h5>Web Development</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <button class="Ask A Question">Ask A Question</button>
+        </div>
+
+
         
     </body>
 </html>
