--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--Top Navigation-->
             <div class="topnav">
         <!--left-aligned links(default)-->
-                    <a href="Moringa School">Moringa School</a>
+                    <h3><span style="color:#EC4067">Moringa</span> School</h3>
         <!--Right-aligned links-->
                 <div class="topnav-right">
                     <ul>
@@ -115,6 +115,31 @@
             <button class="Ask A Question">Ask A Question</button>
         </div>
 
+        
+        <div class="Karimi">
+            <img src="./assets/images/image 8.png" alt="Karimi TM" height="200">
+            </div>
+            <div class="Androiddev">
+            <h5>Web Development</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <button class="Ask A Question">Ask A Question</button>
+        </div>
+        </div>
+    </section>
+
+    <!--project-->
+    <section id="project">
+        <h3>Project<span>It's hopefully a great one</span></h3>
+        <div class="proj">
+            <h4>This is our<h4>
+            <h2><span style="color: #EC4067">Cool Bike Website</span></h2>
+            <p>An application that allows users to showcase bikes<br>for sale and hire whenever they are having team bonding<br>and any hiking activities.</p>
+            <button class="Learn More"></button>
+            <div class="bike-img">
+                <img src="./assets/images/image 9.png" alt="Bike website" height="200">
+            </div>
+        </div>
+    </section>
 
         
     </body>
