--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
         </div>
     </section>
 
-        
-    </body>
+    <!--enroll-->
+    <section id="sectenroll">
+        <div class="enroll">
+            <h2><span style="color: #EC4067">Still not sure?</span></h2>
+            <p>Go ahead and <button class="Enroll">Enroll</button> or <a href="Contact us">Contact us</a></p>
+        </div>
+    </section>
+
+    <!--footer-->
+    <section id="sectfooter">
+        <div class="footer">
+            <p>Designed with Love by GideonLangat</p>
+        </div>
+    </section>
+</body>
+</html>   
+</body>
 </html>
