it will add css styling in html structure

--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
         <h2>Technical Mentors<span>skilled and kind</span></h2>
         <div class="theTms">
             <div class="Rose">
-                <img src="./assets/images/image 5.png" alt="Rose TM" height="200">
+                <img src="./assets/images/image 5.png" alt="Rose TM" height="150">
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
             <button class="Ask A Question">Ask A Question</button>
         </div>
 
         <div class="Byron">
-            <img src="./assets/images/image 6.png" alt="Byron TM" height="200">
+            <img src="./assets/images/image 6.png" alt="Byron TM" height="150">
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
             <button class="Ask A Question">Ask A Question</button>
         </div>
         
         <div class="Raphael">
-            <img src="./assets/images/image 7.png" alt="Raphael TM" height="200">
+            <img src="./assets/images/image 7.png" alt="Raphael TM" height="150">
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
             <button class="Ask A Question">Ask A Question</button>
@@ -111,7 +111,7 @@
 
         
         <div class="Karimi">
-            <img src="./assets/images/image 8.png" alt="Karimi TM" height="200">
+            <img src="./assets/images/image 8.png" alt="Karimi TM" height="150">
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
             <button class="Ask A Question">Ask A Question</button>
@@ -123,10 +123,12 @@
     <section id="project">
         <h3>Project<span>It's hopefully a great one</span></h3>
         <div class="proj">
+            <div class="bike-web">
             <h4>This is our<h4>
             <h2><span style="color: #EC4067">Cool Bike Website</span></h2>
             <p>An application that allows users to showcase bikes<br>for sale and hire whenever they are having team bonding<br>and any hiking activities.</p>
             <button class="Learn More"></button>
+            </div>
             <div class="bike-img">
                 <img src="./assets/images/image 9.png" alt="Bike website" height="200">
             </div>
