--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <section id="sectenroll">
         <div class="enroll">
             <h2><span style="color: #EC4067">Still not sure?</span></h2>
-            <p>Go ahead and<button class="Enroll">Enroll</button> or<a href="Contact us">Contact us</a></p>
+            <p>Go ahead and<button class="Enroll">Enroll</button><span style=color:black>or </span><a href="Contact us">Contact us</a></p>
         </div>
     </section>
 
