it will add styling on the footer

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!--footer-->
     <section id="sectfooter">
         <div class="footer">
-            <p>Designed with Love by GideonLangat</p>
+            <p>Designed with <img src="./assets/images/hearts.png" alt="hearts-img" height="15px">by GideonLangat</p>
         </div>
     </section>
 </body>
