it will add changes to the top nav links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 
      <!--stories-->
      <section id="sectstories">
-        <h3>Stories<span>So many memories</span></h3>
+         <div style="clear:both">
+        <h3 style="float: left">Stories</h3>
+        <h5 style="float: right"></h5>So many memories</h5>
+        </div>
+
         <div class="stories">
             <div class="orient-img">
                 <img src="./assets/images/image 2 .png" alt="orient-img" height="200">
