it will add changes in html structure through styles application

--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
 
      <!--stories-->
      <section id="sectstories">
-         <div style="clear:both">
-        <h3 style="float: left">Stories</h3>
-        <h5 style="float: right"></h5>So many memories</h5>
-        </div>
-
+        <h3 id="memory">Stories
+            <span style="float-right">So many memories</span>
+        </h3>
         <div class="stories">
             <div class="orient-img">
                 <img src="./assets/images/image 2 .png" alt="orient-img" height="200">
@@ -69,7 +67,7 @@
             <button class="Read out stories">Read out stories</button>
         </div>
         <div class="board-img">
-            <img src="./assets/images/image 3 .png" alt="board-img" height="250" width="280">
+            <img src="./assets/images/image 3 .png" alt="board-img" height="200">
         </div>
         </div>
     </section>
@@ -90,26 +88,29 @@
 
     <!--mentors-->
     <section id="sectment">
-        <h2>Technical Mentors<span>skilled and kind</span></h2>
+        <h2 class="text-left-right">
+            <span class="left-text">Technical Mentors</span>
+            <span class="by-line">Skilled and kind!</span>
+        </h2>
         <div class="theTms">
             <div class="Rose">
                 <img src="./assets/images/image 5.png" alt="Rose TM" height="150">
             <h5>Web Development</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
         </div>
 
         <div class="Byron">
             <img src="./assets/images/image 6.png" alt="Byron TM" height="150">
             <h5>Web Development</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
         </div>
         
         <div class="Raphael">
             <img src="./assets/images/image 7.png" alt="Raphael TM" height="150">
             <h5>Web Development</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
         </div>
 
@@ -117,7 +118,7 @@
         <div class="Karimi">
             <img src="./assets/images/image 8.png" alt="Karimi TM" height="150">
             <h5>Web Development</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Nam est purus consectetur<br>sit frin bot</p>
+            <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
             </div>
         </div>
@@ -125,7 +126,9 @@
 
     <!--project-->
     <section id="project">
-        <h3>Project<span>It's hopefully a great one</span></h3>
+        <h3 id="pro">Project
+        <span style="float-right">It's hopefully a great one</span> 
+        </h3>
         <div class="proj">
             <div class="bike-web">
             <h4>This is our<h4>
