added text content over the images

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <div class="stories">
             <div class="orient-img">
                 <img src="./assets/images/image 2 .png" alt="orient-img" height="200">
+               <h4>@23rd September, 2021</h4>
+               <h5>#1</h5>
             </div>
             <div class="orient-day">
                 <h3>Orientation day</h3>
@@ -68,6 +70,8 @@
         </div>
         <div class="board-img">
             <img src="./assets/images/image 3 .png" alt="board-img" height="200">
+            <h4>@23 october,2021</h4>
+            <h5>#2</h5>
         </div>
         </div>
     </section>
@@ -77,6 +81,8 @@
         <div class="Grad">
         <div class="party">
             <img src="./assets/images/image 4.png" alt="Graduation party" height="200">
+            <h4>@10 June, 2022</h4>
+            <h5>#3</h5>
         </div>
         <div class="Grad-party">
             <h3>Graduation party</h3>
@@ -95,6 +101,7 @@
         <div class="theTms">
             <div class="Rose">
             <img src="./assets/images/image 5.png" alt="Rose TM" height="150">
+            <h4>Rose Oketch</h4>
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit.Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
@@ -102,6 +109,7 @@
 
         <div class="Byron">
             <img src="./assets/images/image 6.png" alt="Byron TM" height="150">
+            <h4>Albert Byrone</h4>
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
@@ -109,6 +117,7 @@
         
         <div class="Raphael">
             <img src="./assets/images/image 7.png" alt="Raphael TM" height="150">
+            <h4>Raphael Katana</h4>
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
@@ -117,6 +126,7 @@
         
         <div class="Karimi">
             <img src="./assets/images/image 8.png" alt="Karimi TM" height="150">
+            <h4>Christine Karimi</h4>
             <h5>Web Development</h5>
             <p>Lorem ipsum dolor sit amedgt<br>consectetur adipiscing elit. Nm est<br>purus,consectetur sit amet odio<br>sed, umcorper aliquet tortor</p>
             <button class="Ask A Question">Ask A Question</button>
